change structure button

--- a/src/index.html
+++ b/src/index.html
@@ -36,12 +36,12 @@
         <div class="leftAsideBox__form">
           <div class="leftAsideBox__chooseCity">
             <input class="leftAsideBox__chooseCity--input" placeholder="wybierz miasto" />
-            <button class="leftAsideBox__chooseCity--button">go</button>
+            <button class="leftAsideBox__chooseCity--button"><img src="icons/go.svg" alt=""></button>
           </div>
           <div class="leftAsideBox__findCity">
             <label class="leftAsideBox__findCity--label">albo</label>
-            <button class="leftAsideBox__findCity--button">
-              Znajdź mnie!
+            <button class="leftAsideBox__findCity--button">Znajdź mnie!<img src="icons/baseline-pin_drop-24px.svg"
+                alt="">
             </button>
           </div>
         </div>
