Auto stash before cherrypick of "Zmiana danych pogodowych"

--- a/src/index.html
+++ b/src/index.html
@@ -27,20 +27,17 @@
       <section class="leftAside">
         <div class="leftAsideBox">
           <div class="leftAsideBox__image">
-            <img scr="#" />
+            <img src="icons/logo.svg" alt="">
           </div>
           <div class="leftAsideBox__form">
-            <form method = "post" enctype="text/plain" class="leftAsideBox__ChooseCity">
-              <input
-                type = "text" class="leftAsideBox__ChooseCity--input"
-                id="autocomplete" placeholder="wybierz miasto" 
-              />
-              <button class="leftAsideBox__ChooseCity--button">go</button>
-            </form>
+            <div class="leftAsideBox__chooseCity">
+              <input class="leftAsideBox__chooseCity--input" placeholder="wybierz miasto" />
+              <button class="leftAsideBox__chooseCity--button"><img src="icons/go.svg" alt=""></button>
+            </div>
             <div class="leftAsideBox__findCity">
               <label class="leftAsideBox__findCity--label">albo</label>
-              <button class="leftAsideBox__findCity--button">
-                Znajdź mnie!
+              <button class="leftAsideBox__findCity--button">Znajdź mnie!<img src="icons/baseline-pin_drop-24px.svg"
+                  alt="">
               </button>
             </div>
           </div>
