Restoring city auto-complete

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           </div>
           <div class="leftAsideBox__form">
             <div class="leftAsideBox__chooseCity">
-              <input class="leftAsideBox__chooseCity--input" placeholder="wybierz miasto" />
+              <input class="leftAsideBox__chooseCity--input" id="autocomplete" placeholder="wybierz miasto" />
               <button class="leftAsideBox__chooseCity--button"><img src="icons/go.svg" alt=""></button>
             </div>
             <div class="leftAsideBox__findCity">
