poprawki odnośnie dat

--- a/src/index.html
+++ b/src/index.html
@@ -61,9 +61,15 @@
           </div>
         </div>
         <div class="main__box3">
-          <div class="main__box3--pressure">Ciśnienie</div>
-          <div class="main__box3--humidity">Wilgotność</div>
-          <div class="main__box3--wind">Wiatr</div>
+          <div class="main__box3--pressure">
+            <p>Ciśnienie: </p>
+            <p class="pressure"></p></div>
+          <div class="main__box3--humidity">
+            <p>Wilgotność: </p>
+            <p class="humidity"></p></div>
+          <div class="main__box3--wind">
+            <p>Wiatr: </p>
+            <p class="wind"></p></div>
         </div>
       </section>
 
@@ -73,8 +79,8 @@
         <div class="rightAside__forcast">
           <ul class="rightAside__forcast--list">
             <li class="rightAside__forcast--listItem">
-              czwartek
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
@@ -82,8 +88,8 @@
               </span>
             </li>
             <li class="rightAside__forcast--listItem">
-              piątek
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
@@ -91,8 +97,8 @@
               </span>
             </li>
             <li class="rightAside__forcast--listItem">
-              sobota
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
@@ -100,8 +106,8 @@
               </span>
             </li>
             <li class="rightAside__forcast--listItem">
-              niedziela
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
@@ -109,8 +115,8 @@
               </span>
             </li>
             <li class="rightAside__forcast--listItem">
-              poniedzialek
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
