poprawki odnośnie dat

--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,15 @@
           </div>
         </div>
         <div class="main__box3">
-          <div class="main__box3--pressure weather-info">Ciśnienie<span class="weather-info--bold">1016 hPa</span></div>
-          <div class="main__box3--humidity weather-info">Wilgotność<span class="weather-info--bold">54%</span></div>
-          <div class="main__box3--wind weather-info">Wiatr<span class="weather-info--bold">18 km/h</span></div>
+          <div class="main__box3--pressure weather-info">
+            <p>Ciśnienie: </p>
+            <p class="pressure weather-info--bold"></p></div>
+          <div class="main__box3--humidity weather-info">
+            <p>Wilgotność: </p>
+            <p class="humidity weather-info--bold"></p></div>
+          <div class="main__box3--wind weather-info">
+            <p>Wiatr: </p>
+            <p class="wind weather-info--bold"></p></div>
         </div>
       </section>
 
@@ -70,8 +76,8 @@
         <div class="rightAside__forcast">
           <ul class="rightAside__forcast--list">
             <li class="rightAside__forcast--listItem">
-              czwartek
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
@@ -79,8 +85,8 @@
               </span>
             </li>
             <li class="rightAside__forcast--listItem">
-              piątek
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
@@ -88,8 +94,8 @@
               </span>
             </li>
             <li class="rightAside__forcast--listItem">
-              sobota
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
@@ -97,8 +103,8 @@
               </span>
             </li>
             <li class="rightAside__forcast--listItem">
-              niedziela
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
@@ -106,8 +112,8 @@
               </span>
             </li>
             <li class="rightAside__forcast--listItem">
-              poniedzialek
-              <span class="rightAside__forcast--date"></span>
+              <p class="rightAside__forcast--day"></p>
+              <p class="rightAside__forcast--date"></p>
               <span class="rightAside__forcast--icon"></span>
               <span class="rightAside__forcast--minMax">
                 <p>min</p>
