--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
           <header class="main__box1--header header">Wrocław</header>
           <p class="main__box1--paragraph">nie pada!</p>
         </div>
+        <script async src="js/geolocation.js"></script>
         <div class="main__box2">
           <div class="main__box2--temp header">45&deg;C</div>
           <div class="main__box2--minMax">
