change letter size

--- a/src/index.html
+++ b/src/index.html
@@ -35,12 +35,12 @@
         </div>
         <div class="leftAsideBox__form">
           <div class="leftAsideBox__chooseCity">
-            <input class="leftAsideBox__chooseCity--input" placeholder="wybierz miasto" />
+            <input class="leftAsideBox__chooseCity--input" placeholder="wybierz miasto">
             <button class="leftAsideBox__chooseCity--button"><img src="icons/go.svg" alt=""></button>
           </div>
           <div class="leftAsideBox__findCity">
             <label class="leftAsideBox__findCity--label">albo</label>
-            <button class="leftAsideBox__findCity--button">Znajdź mnie!<img src="icons/baseline-pin_drop-24px.svg"
+            <button class="leftAsideBox__findCity--button">znajdź mnie!<img src="icons/baseline-pin_drop-24px.svg"
                 alt="">
             </button>
           </div>
