--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
 
     <!-- Right aside-->
     <section class="rightAside">
-      <div class="rightAside__date">środa, 14 lipca 2019 12:54</div>
+      <div class="rightAside__date showDate">środa, 14 lipca 2019 12:54</div>
       <div class="rightAside__forcast">
         <ul class="rightAside__forcast--list">
           <li class="rightAside__forcast--listItem">
