--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <section class="main">
       <div class="main__box1">
         <div class="main__box1--icon"></div>
-        <header class="main__box1--header header">Wrocław</header>
+        <header class="main__box1--header header"></header>
         <p class="main__box1--paragraph">nie pada!</p>
       </div>
       <script async src="js/geolocation.js"></script>
