--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
         </div>
       </div>
     </section>
+    
     <div id="right-side-wrapper">
     <!--Main-->
     <section class="main">
@@ -84,46 +85,46 @@
             <p class="rightAside__forcast--day"></p>
             <p class="rightAside__forcast--date"></p>
             <span class="rightAside__forcast--icon"><img src="icons/rainy_3.svg" alt=""></span>
-            <span class="rightAside__forcast--minMax">
+            <div class="rightAside__forcast--minMax">
               <p>min</p>
               <p>max</p>
-            </span>
+            </div>
           </li>
           <li class="rightAside__forcast--listItem">
             <p class="rightAside__forcast--day"></p>
             <p class="rightAside__forcast--date"></p>
             <span class="rightAside__forcast--icon"><img src="icons/rainy_3.svg" alt=""></span>
-            <span class="rightAside__forcast--minMax">
+            <div class="rightAside__forcast--minMax">
               <p>min</p>
               <p>max</p>
-            </span>
+            </div>
           </li>
           <li class="rightAside__forcast--listItem">
             <p class="rightAside__forcast--day"></p>
             <p class="rightAside__forcast--date"></p>
             <span class="rightAside__forcast--icon"><img src="icons/rainy_3.svg" alt=""></span>
-            <span class="rightAside__forcast--minMax">
+            <div class="rightAside__forcast--minMax">
               <p>min</p>
               <p>max</p>
-            </span>
+            </div>
           </li>
           <li class="rightAside__forcast--listItem">
             <p class="rightAside__forcast--day"></p>
             <p class="rightAside__forcast--date"></p>
             <span class="rightAside__forcast--icon"><img src="icons/rainy_3.svg" alt=""></span>
-            <span class="rightAside__forcast--minMax">
+            <div class="rightAside__forcast--minMax">
               <p>min</p>
               <p>max</p>
-            </span>
+            </div>
           </li>
           <li class="rightAside__forcast--listItem">
             <p class="rightAside__forcast--day"></p>
             <p class="rightAside__forcast--date"></p>
             <span class="rightAside__forcast--icon"><img src="icons/rainy_3.svg" alt=""></span>
-            <span class="rightAside__forcast--minMax">
+            <div class="rightAside__forcast--minMax">
               <p>min</p>
               <p>max</p>
-            </span>
+            </div>
           </li>
         </ul>
       </div>
