the option for showing the panel with selecting a city on small screens

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <!-- Left aside-->
     <section class="leftAside">
       <div class="leftAsideBox">
+        <a href="#" class="closebtn">&times;</a>
         <div class="leftAsideBox__image">
           <img src="icons/logo.svg" alt="">
         </div>
@@ -46,6 +47,7 @@
     <div id="right-side-wrapper">
     <!--Main-->
     <section class="main">
+      <a href="#" class="openbtn">&#9776;</a>
       <div class="main-positioner">
       <div class="main__box1">
         <div class="main__box1--icon"></div>
