Change in API - now return only 4 days forecast.... not 5

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
               <p>max</p>
             </div>
           </li>
-          <li class="rightAside__forcast--listItem">
+          <!-- <li class="rightAside__forcast--listItem">
             <p class="rightAside__forcast--day"></p>
             <p class="rightAside__forcast--date"></p>
             <span class="rightAside__forcast--icon"><img src="icons/rainy_3.svg" alt=""></span>
@@ -127,7 +127,7 @@
               <p>min</p>
               <p>max</p>
             </div>
-          </li>
+          </li> -->
         </ul>
       </div>
     </section>
